k8s-app/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    name: test-app
